_generated-doc/2.7/config/quarkus-transaction-manager-transaction-manager-configuration.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-transaction-manager-transaction-manager-configuration_configuration]]link:#quarkus-transaction-manager-transaction-manager-configuration_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.node-name]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.node-name[quarkus.transaction-manager.node-name]`

[.description]
--
The node name used by the transaction manager
--|string 
|`quarkus`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.default-transaction-timeout]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.default-transaction-timeout[quarkus.transaction-manager.default-transaction-timeout]`

[.description]
--
The default transaction timeout
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`60`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store-directory]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store-directory[quarkus.transaction-manager.object-store-directory]`

[.description]
--
The directory name of location of the transaction logs. If the value is not absolute then the directory is relative to the *user.dir* system property.
--|string 
|`ObjectStore`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
